; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/timers/extr_raw_skew.c_ts_to_nsec.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/timers/extr_raw_skew.c_ts_to_nsec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32, i64 }

@NSEC_PER_SEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ts_to_nsec(i32 %0, i64 %1) #0 {
  %3 = alloca %struct.timespec, align 8
  %4 = bitcast %struct.timespec* %3 to { i32, i64 }*
  %5 = getelementptr inbounds { i32, i64 }, { i32, i64 }* %4, i32 0, i32 0
  store i32 %0, i32* %5, align 8
  %6 = getelementptr inbounds { i32, i64 }, { i32, i64 }* %4, i32 0, i32 1
  store i64 %1, i64* %6, align 8
  %7 = getelementptr inbounds %struct.timespec, %struct.timespec* %3, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load i32, i32* @NSEC_PER_SEC, align 4
  %10 = mul nsw i32 %8, %9
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.timespec, %struct.timespec* %3, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = add i64 %11, %13
  ret i64 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
